Freestyle On/Off keyframe is being ignored #43567

Closed
opened 2015-02-04 20:00:23 +01:00 by Georg K · 6 comments

System Information
Ubuntu 14.04 x64, Radeon HD 7770

Blender Version
Broken: 2.73a official, recent build 2.73.5 Hash 701a7dc
Worked: ?

Short description of error
Despite animating the Freestyle checkbox, the animation is either rendered completely with Freestyle lines or completely without (when the current frame is behind the keyframe that turns Freestyle on and I click Render Animation, the animation will be entirely Freestyle, if the current frame is before the Freestyle keyframe and I click Render Animation, the entire animation will be without Freestyle).

Exact steps for others to reproduce the error
In the attached .blend, Render Animation and Play Rendered Animation - you see that there are no Freestyle lines throughout the video
Set the Current Frame to something >=11 , Render Animation and Play Rendered Animation - Freestyle is used in the whole video

  • The keyframe turning Freestyle on on frame 11 is being ignored.

FreestyleAnimated_bug.blend

**System Information** Ubuntu 14.04 x64, Radeon HD 7770 **Blender Version** Broken: 2.73a official, recent build 2.73.5 Hash 701a7dc Worked: ? **Short description of error** Despite animating the Freestyle checkbox, the animation is either rendered completely with Freestyle lines or completely without (when the current frame is behind the keyframe that turns Freestyle on and I click Render Animation, the animation will be entirely Freestyle, if the current frame is before the Freestyle keyframe and I click Render Animation, the entire animation will be without Freestyle). **Exact steps for others to reproduce the error** In the attached .blend, Render Animation and Play Rendered Animation - you see that there are no Freestyle lines throughout the video Set the Current Frame to something >=11 , Render Animation and Play Rendered Animation - Freestyle is used in the whole video - > The keyframe turning Freestyle on on frame 11 is being ignored. [FreestyleAnimated_bug.blend](https://archive.blender.org/developer/F141014/FreestyleAnimated_bug.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @georgK

Added subscriber: @georgK
Aaron Carlisle self-assigned this 2015-02-04 20:36:13 +01:00
Aaron Carlisle removed their assignment 2015-02-04 20:37:24 +01:00
Bastien Montagne self-assigned this 2015-02-04 21:19:34 +01:00

This should not be animatable at all…

This should not be animatable at all…

This issue was referenced by 37ae32870e

This issue was referenced by 37ae32870e48479abd730f0706f7e69f07b4a6cc

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 37ae32870e.

Closed by commit 37ae32870e.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43567
No description provided.