Fix T43567: Freestyle On/Off keyframe is being ignored.

That kind of stuff shall not be animated! :)